--- a/my-app/package.json
+++ b/my-app/package.json
@@ -23,6 +23,7 @@
     "react-datepicker": "^6.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
+    "react-script": "^2.0.5",
     "react-scripts": "5.0.1",
     "react-spring": "^9.7.3",
     "stream-browserify": "^3.0.0",
