--- a/my-app/package.json
+++ b/my-app/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
+    "chroma-js": "^2.4.2",
     "crypto": "^1.0.1",
     "dns": "^0.2.2",
     "firebase": "^10.8.0",
@@ -25,6 +26,7 @@
     "react-router-dom": "^6.22.1",
     "react-script": "^2.0.5",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
     "react-spring": "^9.7.3",
     "stream-browserify": "^3.0.0",
     "url": "^0.11.3",
