--- a/my-app/package.json
+++ b/my-app/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fullcalendar/daygrid": "^6.1.11",
+    "@fullcalendar/react": "^6.1.11",
     "@react-spring/web": "^9.7.3",
     "@sendgrid/mail": "^8.1.1",
     "@testing-library/jest-dom": "^5.17.0",
