working img/file form (ui only)

--- a/my-app/package.json
+++ b/my-app/package.json
@@ -3,16 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
     "@fullcalendar/daygrid": "^6.1.11",
     "@fullcalendar/react": "^6.1.11",
+    "@mui/material": "^5.15.14",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "@mui/x-date-pickers": "^6.19.8",
     "@react-spring/web": "^9.7.3",
     "@sendgrid/mail": "^8.1.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
+    "bootstrap": "^5.3.3",
     "chroma-js": "^2.4.2",
     "crypto": "^1.0.1",
+    "dayjs": "^1.11.10",
     "dns": "^0.2.2",
     "firebase": "^10.8.0",
     "fs": "^0.0.1-security",
@@ -23,6 +30,7 @@
     "os": "^0.1.2",
     "path": "^0.12.7",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-datepicker": "^6.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
@@ -31,6 +39,7 @@
     "react-select": "^5.8.0",
     "react-spring": "^9.7.3",
     "stream-browserify": "^3.0.0",
+    "styled-components": "^6.1.8",
     "url": "^0.11.3",
     "util": "^0.12.5",
     "web-vitals": "^2.1.4",
